# ACSO

./: CMakeLists.txt  Esercizio 2  README.md
Data Structures/: Esercizio 1.c  Esercizio 2.c  Esercizio 3.c  newlib.c  newlib.h
Homeworks/: FirstMutex.c  MainExec.c  PrintAndModify.c  PrintInFile.c  PrintPID.c  PrintTenTimes.c  SecondaryExec.c  SemaphoreThreads.c  StampThread.c
Processes and Threads/: Esercizio 1.c  Esercizio 2.c  Esercizio 3.c  Esercizio 4.c  Esercizio 5.c  Esercizio 6.c
